Added skills section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link active" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
+              <a class="nav-link" href="#skill-section">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Projects</a>
@@ -57,7 +57,33 @@
 <section id="about-section"></section>
 
 <!-- Skill Section-->
-<section id="skill-section"></section>
+<section id="skill-section">
+  <span class="skill-heading">Skills</span>
+  <div class="row">
+    <div class="col-md-7">
+      <div class="skill-container">
+          <div class="skill skill-html">HTML</div>
+          <div class="skill skill-css">CSS</div>
+          <div class="skill skill-scss">SCSS</div>
+          <div class= "skill skill-jquery">JQUERY</div>
+          <div class="skill skill-javascript">JAVASCRIPT</div>
+          <div class="skill skill-react">REACT</div>
+          <div class="skill skill-nodejs">NODEJS</div>
+          <div class="skill skill-graphql">GRAPHQL</div>
+       </div>
+   </div>
+  <div class="col-md-5">
+     <div>
+
+     </div>
+  </div>
+  </div>
+
+</div>
+ 
+  
+  
+</section>
 
 <!--Project Section-->
 <section id="project-section"></section>
@@ -72,10 +98,11 @@
 <footer>
   <div id="footer-section">
       <div class="socail-icons">
-          <i class="fa fa-facebook-official fa-2x"> <a href="https://www.facebook.com/prince.singh.12139"></a></i>
-          <i class="fa fa-twitter-square fa-2x" aria-hidden="true"><a href="https://twitter.com/princersingh696"></a></i>
-          <i class="fa fa-github fa-2x" aria-hidden="true"><a href="https://github.com/singhprince123"></a></i>
-          <i class="fa fa-envelope fa-2x" aria-hidden="true"><a href="princersingh696@gmail.com"></a></i>
+          <a href="https://www.facebook.com/prince.singh.12139"><i class="fa fa-facebook-official fa-2x"> </i></a>
+          <a href="https://twitter.com/princersingh696"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+          <a href="https://github.com/singhprince123"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+          <a href="princersingh696@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+          
       </div>
     <span>Copyright &copy prince singh</span>
     
