Added index.php file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="col-md-12">
       <h2 class="about-heading">About Me</h2>
       <div class="about-content">
-        <p>Hi , My name is Prince Singh.I am web developer, as i started my carrier doing html and css.
+        <p>Hi , My name is Prince Singh.I am web developer,i started my carrier doing html and css.
         It was very interesting and I was having fun while doing though some time messing in css , positioning things and  I think thats fair enogh eveey body goes thruogh.</p>
         <p>This brings me to the web development and since i have done computer science , i have done this before while i was in graduating in computer science engineering
         The next thing that i have learnt is javascript and initially i was thinking that with javascript i could do only making website interactive but as i explored it , 
